[project]
name = "python-docstring-markdown"
version = "0.1.0"
description = "Generates Markdown documentation from Python module dosctrings"
authors = [
    {name = "Chris Riccomini", email = "criccomini@apache.org"},
]
dependencies = ["docstring-parser-fork>=0.0.12"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "CC-0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
autoflake = "autoflake --remove-all-unused-imports --in-place --recursive src/markupdown/ tests/"
black = "black src/markupdown/ tests/"
isort = "isort src/markupdown/ tests/"
style = { composite = ["black", "isort", "autoflake"] }
test = "pytest"

[tool.isort]
profile = "black"
case_sensitive = true

[tool.pylint.master]
fail-under = 7

[tool.pylint.messages_control]
max-line-length = 120

[tool.pyright]
include = ["src/markupdown/"]
pythonPlatform = "All"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "black>=25.1.0",
    "isort>=6.0.0",
    "pylint>=3.3.4",
    "pyright>=1.1.394",
    "autoflake>=2.3.1",
]
